fixed mobile distortion

--- a/src/components/landing/css/landscape.css
+++ b/src/components/landing/css/landscape.css
@@ -5,8 +5,12 @@
   }
 
   .ttt_letters {
-    margin: 10px;
+    margin: 5px 10px;
     height: 20vh;
     width: 20vw;
+  }
+
+  .grid_tile {
+    border-radius: 0.2em;
   }
 }
