--- a/src/components/landing/css/mobile.css
+++ b/src/components/landing/css/mobile.css
@@ -4,8 +4,12 @@
   }
 
   .ttt_letters {
-    margin: 25px;
-    height: 12vh;
-    width: 50vw;
+    margin: 20px 10px;
+    height: 15vh;
+    width: 30vw;
+  }
+
+  .grid_tile {
+    border-radius: 0.3em;
   }
 }
